[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis_functions"
dynamic = ["version"]
authors = [
  { name="Sverre Hassing", email="s.h.w.hassing@tudelft.nl" },
]
description = "Functions used in my Masters thesis on seismic interferometry"
readme = "README.md"
license = { file="LICENSE" }
dependencies = ["numpy",
            	"matplotlib",
            	"scipy",
            	"obspy",
            	"tqdm"]

[tool.setuptools.dynamic]
version = {attr = "thesis_functions.__version__"}